--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -26,7 +26,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.9}{03/05/2023}{Alberti Nicolas}{Soldà Matteo}{Aggiunta sezione 4.1.1; modifica sezione 4.1}
 \addversione{0.0.10}{11/05/2023}{Erica Cavaliere}{Lorenzo Salami}{Aggiunta sezione 2.2.6}
 \addversione{0.0.11}{24/07/2023}{Soldà Matteo}{Ceccato Francesco}{Inserite norme di codifica}
-\addversione{0.1.0}{24/07/2023}{Ceccato Francesco}{Brotto Rominca}{Verifica documento per RTB}
+\addversione{0.1.0}{24/07/2023}{Ceccato Francesco}{Brotto Romina}{Verifica documento per RTB}
 \addversione{1.0.0}{24/07/2023}{Soldà Matteo}{Ceccato Francesco}{Approvazione documento per RTB}
 
 \begin{document}
