--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -137,6 +137,24 @@ Lo stesso si può riscontrare nella distanza tra il planned e l’earned value, 
 Il gruppo aveva tenuto in considerazione che ci sarebbe stato un calo di lavoro 
 durante gli sprint sopra indicati, prevedendo però di rientrare nei valori di tolleranza negli sprint successivi.
 
+\subsection{Planning Value, Actual Cost e Earned Value}
+\begin{center}
+	%\includegraphics[scale=0.5]{AC_PV_EV.png}
+\end{center}
+\subsection{Cost Variance e Schedule Variance}
+\begin{center}
+	%\includegraphics[scale=0.5]{Cost_Variance_Schedule_Variance.png}
+\end{center}
+
+\subsection{Eastimate at completition e Estimate to Complete}
+\begin{center}
+	%\includegraphics[scale=0.6]{EAC_ETC.png}
+\end{center}
+\subsection{Cost Performance Index}
+\begin{center}
+	%\includegraphics[scale=0.6]{CPI.png}
+\end{center}
+
 \subsection{Indice di Gulpease}
 I valori riportati sono frutto di un'analisi approssimativa, usando la libreria PyPdf2 per Python 3.
 \begin{center}
