--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -157,25 +157,35 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 \end{itemize}
 \includegraphics[scale=0.24]{WoW_1.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & & 1 & & & & 1\\
-    \hline
-    Francesco & & 1 & & & & & 1\\
-    \hline
-    Lorenzo & & & 1 & & & & 1\\
-    \hline
-    Matteo & 2 & & & & & & 2\\
-    \hline
-    Nicolas & & 1.30 & & & & & 1.30\\
-    \hline
-    Romina & & & & & & 1 & 1\\
-    \hline
-    \textbf{Totale} & 2 & 2.30 & 2 & 0 & 0 & 1 & 7.30\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 4            & 120                     \\
+		\hline
+		Amministratore  & 20                            & 3            & 60                      \\
+		\hline
+		Analista        & 25                            & 10            & 250                     \\
+		\hline
+		Progettista     & 25                            & 0            & 0                       \\
+		\hline
+		Programmatore   & 15                            & 0            & 0                       \\
+		\hline
+		Verificatore    & 15                            & 5            & 75                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 22           & 505                     \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+
 
 \subsubsection{Sprint 2}
 \textbf{Data di inizio:} 28/04/2023\newline
@@ -195,25 +205,32 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_1.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & & 2 & & & & 3(+2)\\
-    \hline
-    Francesco & & & 2 & & & & 3(+2)\\
-    \hline
-    Lorenzo & & & & & & 2 & 3(+2)\\
-    \hline
-    Matteo & & 3 & & & & & 5(+3)\\
-    \hline
-    Nicolas & 3 & & & & & & 4.30(+3)\\
-    \hline
-    Romina & & 2 & & & & & 3(+2)\\
-    \hline
-    \textbf{Totale} & 5(+3) & 7.30(+5) & 6(+4) & 0(+0) & 0(+0) & 3(+2) & 21.30(+14)\\
-    \hline
-\end{tabular}\\[8pt]
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 7 (+3)            & 210                     \\
+		\hline
+		Amministratore  & 20                            & 6 (+3)           & 120                     \\
+		\hline
+		Analista        & 25                            & 12 (+2)          & 300                     \\
+		\hline
+		Progettista     & 25                            & 0            & 0                       \\
+		\hline
+		Programmatore   & 15                            & 0            & 0                       \\
+		\hline
+		Verificatore    & 15                            & 9 (+4)          & 135                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 34(+12)           &     765 (+260)                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
 
 \subsubsection{Sprint 3}
 \textbf{Data di inizio:} 09/05/2023\newline
@@ -233,25 +250,31 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_2.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & 2 & & & & & 5(+2)\\
-    \hline
-    Francesco & & & 2 & & & & 5(+2)\\
-    \hline
-    Lorenzo & & 2 & & & & & 5(+2)\\
-    \hline
-    Matteo & 2 & & & & & & 7(+2)\\
-    \hline
-    Nicolas & & & & & & 2 & 6.30(+2)\\
-    \hline
-    Romina & & & 2 & & & & 5(+2)\\
-    \hline
-    \textbf{Totale} & 7(+2) & 11.30(+4) & 10(+4) & 0(+0) & 0(+0) & 5(+2) & 33.30(+12)\\
-    \hline
-\end{tabular}\\[8pt]
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 10(+3)            & 300                      \\
+		\hline
+		Amministratore  & 20                            & 9(+3)            & 180                      \\
+		\hline
+		Analista        & 25                            & 18(+6)           & 375                     \\
+		\hline
+		Progettista     & 25                            & 0            & 0                       \\
+		\hline
+		Programmatore   & 15                            & 0            & 0                       \\
+		\hline
+		Verificatore    & 15                            & 11(+2)            & 165                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 35(+1)           &   1.020                      \\ 		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
 
 \subsubsection{Sprint 4}
 \textbf{Data di inizio:} 17/05/2023\newline
