--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -26,7 +26,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{0.0.6}{02/06/2023}{Brotto Romina}{Soldà Matteo}{Completamento sprint 5}
 \addversione{0.0.7}{11/06/2023}{Cavaliere Erica}{Soldà Matteo}{Completamento sprint 6}
 \addversione{0.0.8}{23/06/2023}{Alberti Nicolas}{Cavaliere Erica}{Completamento sprint 7}
-\addversione{0.0.9}{02/07/2023}{Soldà Matteo}{Cavaliere Erica}{Completamento sprint 8}
+\addversione{0.0.9}{21/07/2023}{Soldà Matteo}{Cavaliere Erica}{Completamento sprint 8}
 \addversione{0.0.10}{21/07/2023}{Soldà Matteo}{Alberti Nicolas}{Aggiunta di specifiche relative ai rischi}
 \addversione{0.1.0}{24/07/2023}{Brotto Romina}{Soldà Matteo}{Verifica documento per RTB}
 \addversione{1.0.0}{24/07/2023}{Soldà Matteo}{Brotto Romina}{Approvazione documento per RTB}
@@ -166,20 +166,20 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\hline
 		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
 		\hline
-		Responsabile    & 30                            & 4            & 120                     \\
+		Responsabile    & 30                            & 6(+6)        & 180                     \\
 		\hline
-		Amministratore  & 20                            & 3            & 60                      \\
+		Amministratore  & 20                            & 4(+4)        & 80                     \\
 		\hline
-		Analista        & 25                            & 10            & 250                     \\
+		Analista        & 25                            & 11(+11)      & 275                     \\
 		\hline
-		Progettista     & 25                            & 0            & 0                       \\
+		Progettista     & 25                            & 0(+0)        & 0                       \\
 		\hline
-		Programmatore   & 15                            & 0            & 0                       \\
+		Programmatore   & 15                            & 0(+0)        & 0                       \\
 		\hline
-		Verificatore    & 15                            & 5            & 75                      \\
+		Verificatore    & 15                            & 3(+3)        & 45                      \\
 		\hline
 		\hline
-		\textbf{Totale} &                               & 22           & 505                     \\
+		\textbf{Totale} &                               & 24           & 580                     \\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -205,6 +205,7 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_1.png}\newline
 \newline
+
 \begin{center}
 	\begin{tabularx}{\textwidth}{|X|X|X|X|}
 		\hline
@@ -213,20 +214,20 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\hline
 		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
 		\hline
-		Responsabile    & 30                            & 7 (+3)            & 210                     \\
+		Responsabile    & 30                            & 12(+6)       & 180                     \\
 		\hline
-		Amministratore  & 20                            & 6 (+3)           & 120                     \\
+		Amministratore  & 20                            & 9(+5)        & 100                      \\
 		\hline
-		Analista        & 25                            & 12 (+2)          & 300                     \\
+		Analista        & 25                            & 21(+10)       & 250                     \\
 		\hline
-		Progettista     & 25                            & 0            & 0                       \\
+		Progettista     & 25                            & 0(+0)        & 0                       \\
 		\hline
-		Programmatore   & 15                            & 0            & 0                       \\
+		Programmatore   & 15                            & 0(+0)        & 0                       \\
 		\hline
-		Verificatore    & 15                            & 9 (+4)          & 135                      \\
+		Verificatore    & 15                            & 8(+5)        & 75                      \\
 		\hline
 		\hline
-		\textbf{Totale} &                               & 34(+12)           &     765 (+260)                    \\
+		\textbf{Totale} &                               & 50           & 1185                    \\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -250,6 +251,7 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_2.png}\newline
 \newline
+
 \begin{center}
 	\begin{tabularx}{\textwidth}{|X|X|X|X|}
 		\hline
@@ -258,20 +260,21 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\hline
 		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
 		\hline
-		Responsabile    & 30                            & 10(+3)            & 300                      \\
+		Responsabile    & 30                            & 18(+6)       & 180                     \\
 		\hline
-		Amministratore  & 20                            & 9(+3)            & 180                      \\
+		Amministratore  & 20                            & 17(+8)       & 160                     \\
 		\hline
-		Analista        & 25                            & 18(+6)           & 375                     \\
+		Analista        & 25                            & 35(+14)      & 350                     \\
 		\hline
-		Progettista     & 25                            & 0            & 0                       \\
+		Progettista     & 25                            & 0(+0)        & 0                       \\
 		\hline
-		Programmatore   & 15                            & 0            & 0                       \\
+		Programmatore   & 15                            & 0(+0)        & 0                       \\
 		\hline
-		Verificatore    & 15                            & 11(+2)            & 165                      \\
+		Verificatore    & 15                            & 12(+4)       & 60                      \\
 		\hline
 		\hline
-		\textbf{Totale} &                               & 35(+1)           &   1.020                      \\ 		\hline
+		\textbf{Totale} &                               & 82           & 1935                    \\
+		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
 \end{center}
@@ -295,25 +298,33 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_3.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & 1 & & & & & 6(+1)\\
-    \hline
-    Francesco & & & & & & 1 & 6(+1)\\
-    \hline
-    Lorenzo & & 1 & & & & & 6(+1)\\
-    \hline
-    Matteo & & & 2 & & & & 9(+2)\\
-    \hline
-    Nicolas & & & 2 & & & & 8.30(+2)\\
-    \hline
-    Romina & 1 & & & & & & 6(+1)\\
-    \hline
-    \textbf{Totale} & 8(+1) & 13.30(+2) & 14(+4) & 0(+0) & 0(+0) & 6(+1) & 41.30(+8)\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 21(+3)       & 90                      \\
+		\hline
+		Amministratore  & 20                            & 21(+4)       & 80                      \\
+		\hline
+		Analista        & 25                            & 50(+15)      & 375                     \\
+		\hline
+		Progettista     & 25                            & 0(+0)        & 0                       \\
+		\hline
+		Programmatore   & 15                            & 0(+0)        & 0                       \\
+		\hline
+		Verificatore    & 15                            & 17(+5)       & 75                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 109          & 2555                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
 
 \subsubsection{Sprint 5}
 \textbf{Data di inizio:} 26/05/2023\newline
@@ -332,25 +343,33 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_4.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & 1 & & 2 & & & & 9(+3)\\
-    \hline
-    Francesco & & & & & & 1 & 7(+1)\\
-    \hline
-    Lorenzo & & & & & & 1 & 7(+1)\\
-    \hline
-    Matteo & & & & & 2 & & 11(+2)\\
-    \hline
-    Nicolas & & & & & 2 & & 10.30(+2)\\
-    \hline
-    Romina & & & 2 & & & & 8(+2)\\
-    \hline
-    \textbf{Totale} & 9(+1) & 13.30(+0) & 18(+4) & 0(+0) & 4(+4) & 8(+2) & 52.30(+11)\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 24(+3)       & 90                      \\
+		\hline
+		Amministratore  & 20                            & 23(+2)       & 40                      \\
+		\hline
+		Analista        & 25                            & 55(+5)       & 125                     \\
+		\hline
+		Progettista     & 25                            & 2(+2)        & 50                     \\
+		\hline
+		Programmatore   & 15                            & 1(+1)        & 15                       \\
+		\hline
+		Verificatore    & 15                            & 23(+6)       & 90                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 128          & 2965                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
 
 \subsubsection{Sprint 6}
 \textbf{Data di inizio:} 03/06/2023\newline
@@ -368,25 +387,33 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_5.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & & & & & 2 & 11(+2)\\
-    \hline
-    Francesco & & & 2 & & & & 9(+2)\\
-    \hline
-    Lorenzo & & & 2 & & & & 9(+2)\\
-    \hline
-    Matteo & & & & & 3 & & 14(+3)\\
-    \hline
-    Nicolas & & 0.30 & & & 2 & & 13(+2.30)\\
-    \hline
-    Romina & 2 & & & & & & 10(+2)\\
-    \hline
-    \textbf{Totale} & 11(+2) & 14(+0.30) & 22(+4) & 0(+0) & 10(+6) & 11(+2) & 66(+13.30)\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 26(+2)       & 60                      \\
+		\hline
+		Amministratore  & 20                            & 24(+1)       & 20                       \\
+		\hline
+		Analista        & 25                            & 56(+1)       & 25                       \\
+		\hline
+		Progettista     & 25                            & 7(+5)       & 125                     \\
+		\hline
+		Programmatore   & 15                            & 16(+15)      & 225                     \\
+		\hline
+		Verificatore    & 15                            & 27(+4)       & 60                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 156          & 3480                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
 
 \subsubsection{Sprint 7}
 \textbf{Data di inizio:} 13/06/2023\newline
@@ -403,29 +430,37 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_6.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & & & & 2 & & 13(+2)\\
-    \hline
-    Francesco & & & & 2 & & & 11(+2)\\
-    \hline
-    Lorenzo & 1 & & & & & & 10(+1)\\
-    \hline
-    Matteo & & & & 1 & & & 15(+1)\\
-    \hline
-    Nicolas & & & 2 & & & & 15(+2)\\
-    \hline
-    Romina & & 1 & & & & & 11(+1)\\
-    \hline
-    \textbf{Totale} & 12(+1) & 15(+1) & 24(+2) & 3(+3) & 12(+2) & 11(+0) & 75(+9)\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 29(+3)       & 90                      \\
+		\hline
+		Amministratore  & 20                            & 26(+2)       & 40                       \\
+		\hline
+		Analista        & 25                            & 57(+1)       & 25                       \\
+		\hline
+		Progettista     & 25                            & 11(+4)       & 100                     \\
+		\hline
+		Programmatore   & 15                            & 26(+10)       & 150                     \\
+		\hline
+		Verificatore    & 15                            & 31(+4)       & 60                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 177          & 3945                   \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
 
 \subsubsection{Sprint 8}
 \textbf{Data di inizio:} 19/06/2023\newline
-\textbf{Data di fine:} 03/07/2023\newline
+\textbf{Data di fine:} 21/07/2023\newline
 \newline
 \textbf{Suddivisione del lavoro:}
 \begin{itemize}
@@ -443,25 +478,33 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_7.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & & & 0.5 & & & 13.5(+0.5)\\
-    \hline
-    Francesco & & & & 0.5 & & & 11.5(+0.5)\\
-    \hline
-    Lorenzo & 1 & & & & & & 11(+1)\\
-    \hline
-    Matteo & & & & & & 1 & 16(+1)\\
-    \hline
-    Nicolas & & & & & 2 & & 17(+2)\\
-    \hline
-    Romina & & 1 & & & & & 12(+1)\\
-    \hline
-    \textbf{Totale} & 13(+1) & 16(+1) & 24(+0) & 4(+1) & 14(+2) & 12(+1) & 81(+6)\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 32(+3)       & 90                      \\
+		\hline
+		Amministratore  & 20                            & 32(+6)       & 120                      \\
+		\hline
+		Analista        & 25                            & 62(+5)       & 125                       \\
+		\hline
+		Progettista     & 25                            & 31(+20)       & 500                      \\
+		\hline
+		Programmatore   & 15                            & 56(+30)       & 450                      \\
+		\hline
+		Verificatore    & 15                            & 46(+15)       & 225                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 259          & 5455                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
 
 \newpage
 
