--- a/docs/interni/verbali/2023_07_24_I/2023_07_24_I.tex
+++ b/docs/interni/verbali/2023_07_24_I/2023_07_24_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 24/07/2023}
 \setredattori{Brotto Romina}
-\setrevisori{}
+\setrevisori{Salami Lorenzo}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 24/07/2023
