--- a/docs/interni/verbali/2023_07_24_I/2023_07_24_I.tex
+++ b/docs/interni/verbali/2023_07_24_I/2023_07_24_I.tex
@@ -43,9 +43,9 @@ L'incontro ha avuto come scopo principale l'ultimazione e la sistemazione dei do
 In particolare:
 \begin{itemize}
     \item Ultimate le norme di progetto aggiungendo dei dettagli sulle norme di codifica;
-    \item Aggiornato il Piano di Progetto con alcune tabelle di analisi sui rischi;
     \item Revisionata e versionata l'Analisi dei Requisiti ed il Glossario;
-    \item Ultimato il Piano di Qualifica.
+    \item Iniziato aggiornamento del Piano di Progetto con alcune tabelle di analisi sui rischi;
+    \item Inizio costruzione grafici finali per il Piano di Qualifica.
 \end{itemize}
 
 \section*{Impegni Assunti}
