Fix redattori PdQ

--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -12,7 +12,7 @@
 \graphicspath{ {./immagini/} }
 
 \settitolo{Piano di Qualifica}
-\setredattori{Lorenzo Salami}
+\setredattori{Brotto Romina\\ Salami Lorenzo \\ Soldà Matteo}
 \setdestuso{esterno}
 \setdescrizione{
 Questo documento serve a definire le metriche e i criteri di accettazione dei prodotti.
